fdo#72042: Fix for "Font names are not localized (Mac OS X)"

This patch will bring the behavior of 4.0 to master(4.3).
This patch has 1 changes on implementation of vcl/quartz/ctfonts.cxx.

We will use CTFontDescriptorCopyLocalizedAttribute() API,If possible.
So DevFontFromCTFontDescriptor() can return the localized fontname.

Change-Id: I7eb5bda4fa69540fb32de573190a30bcb2c01cd2